# nixdex

./: .gitignore  .gitleaks.toml  .trufflehog-exclude  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  clippy.toml  command-not-found.nu  command-not-found.sh  criterion.toml  deny.toml  flake.nix  justfile  mise.toml  rust-toolchain.toml
.cargo/: config.toml
.config/: nextest.toml  rail.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: benchmark.yml  ci.yml  coverage.yml  exhaustive.yml  hax.yml  kani.yml  miri.yml  pr-hygiene.yml  publish.yml  secrets-scan.yml
.kilo/plans/: 1784566204299-network-fetch-acceleration.md  1784864451441-nixdex-audit-vs-nix-locate.md  1784866621132-search-relevance-sort.md  1784868370650-performance-optimization-plan.md  1784871064045-expand-nixdex-features.md  1784872852691-ratatui-tui-and-comprehensive-audit.md
changelog.d/: allow-unfree.added.md  benchmark-improvements.added.md  benchmark-scripts-tempdir.fixed.md  cargo-rail.changed.md  cdc-client.added.md  chunk-size.changed.md  cli-parity-review.fixed.md  clippy-errors-database.fixed.md  command-index.added.md  command-not-found-upstream.added.md  crates-io-prep-review.fixed.md  daemon-auth-atomic.changed.md  daemon-cfg.fixed.md  darwin-scope.added.md  darwin-scope.changed.md  default-db-path.changed.md  default-db-path.fixed.md  default-db-tests.added.md  exact-attr-index.changed.md  fmt-main.changed.md  forbidden-bytes.fixed.md  frcode-buffer-optimisation.changed.md  frcode-hax-extraction.fixed.md  fuzzy-search-frizbee.changed.md  gha-benchmarks.added.md  index-progress.changed.md  listings-top-level.fixed.md  local-dev-ignore.changed.md  man-pages.added.md  more-benchmarks.added.md  ngram-roaring-postings.changed.md  nix-eval-jobs-cleanup.fixed.md  nix-locate-relevance.added.md  nixdex-daemon-api.added.md  nixdex-history.added.md  nixdex-options.added.md  p11.added.md  p5-review-fixes.fixed.md  package-meta-fields.fixed.md  path-trigram-entry-index.added.md  (+28 more)
crates/nixdex/: Cargo.toml
crates/nixdex-cli/: Cargo.toml
crates/nixdex-cli/assets/: command-not-found.fish  command-not-found.nu  command-not-found.sh
crates/nixdex-cli/src/: daemon_client.rs  index.rs  lib.rs  locate.rs  tui.rs
crates/nixdex-cli/tests/: cli.rs  daemon_client.rs
crates/nixdex-core/: Cargo.toml
crates/nixdex-core/benches/: basename_index.rs  cnf.rs  entry_index.rs  frcode.rs  index.rs  locate.rs  ngram_index.rs  path_index.rs  search.rs
crates/nixdex-core/src/: basename_index.rs  cache_dir.rs  cdc.rs  command_index.rs  daemon.rs  database.rs  entry_index.rs  errors.rs  files.rs  frcode.rs  hydra.rs  index.rs  lib.rs  listings.rs  ngram_index.rs  nixpkgs.rs  package_search.rs  path_cache.rs  path_entry_index.rs  path_index.rs  path_trigram_index.rs  prebuilt.rs  redb_index.rs  store_path.rs
crates/nixdex-core/tests/: proptest.rs
crates/nixdex-daemon/: Cargo.toml
crates/nixdex-daemon/src/: main.rs
crates/nixdex-history/: Cargo.toml
crates/nixdex-history/src/: lib.rs
crates/nixdex-options/: Cargo.toml
crates/nixdex-options/src/: lib.rs
crates/nixdex-tui/: Cargo.toml
crates/nixdex-tui/src/: app.rs  event.rs  lib.rs  tui.rs  ui.rs
crates/nixdex/src/: lib.rs
nix/: home-module.nix  nixos-module.nix
research/: baseline.md  eval-cache-api.md  eval-sample.json  modernization-2026-002.md  modernization-2026-003.md  modernization-2026.md  sample-ls.json  small.nix  tiny.nix  wave4-results.md
scripts/: benchmark-index-comparison.sh  benchmark-index.sh  benchmark-locate.sh  benchmark-search.sh  changelog.py  p99-guard.sh  publish-crates.sh
