[package]
name = "nixdex-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
publish = false
default-run = "nix-index"

[dependencies]
clap = { workspace = true }
regex = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
sonic-rs = { workspace = true }
serde = { workspace = true }
nixdex-core = { workspace = true, features = ["cli", "daemon"] }
clap_complete = "4.6.7"
clap_mangen = "0.2.26"

[dev-dependencies]
bytes = { workspace = true }
tempfile = "3"

[[bin]]
name = "nix-index"
path = "src/bin/nix-index.rs"

[[bin]]
name = "nix-locate"
path = "src/bin/nix-locate.rs"

[[bin]]
name = "nixdex"
path = "src/bin/nixdex.rs"

[lints]
workspace = true
