[package]
name = "nixdex-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line tools for nixdex: nix-index, nix-locate, and nixdex"
publish = true
default-run = "nix-index"

[dependencies]
clap = { workspace = true }
regex = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
tokio = { workspace = true }
sonic-rs = { workspace = true }
serde = { workspace = true }
reqwest = { workspace = true }
nixdex-core = { workspace = true, features = ["cli", "daemon"] }
nixdex-history = { workspace = true }
nixdex-options = { workspace = true }
tracing = { workspace = true }
clap_complete = "4.6.7"
clap_mangen = "0.2.26"
ratatui = { workspace = true }
crossterm = { workspace = true }

[dev-dependencies]
bytes = { workspace = true }
tempfile = "3"

[[bin]]
name = "nix-index"
path = "src/bin/nix-index.rs"

[[bin]]
name = "nix-locate"
path = "src/bin/nix-locate.rs"

[[bin]]
name = "nixdex"
path = "src/bin/nixdex.rs"

[lints]
workspace = true
