[package]
name = "nixdex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description.workspace = true
publish = false

[features]
default = []
cli = ["dep:clap"]

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
rayon = { workspace = true }
sonic-rs = { workspace = true }
fst = { workspace = true }
roaring = { workspace = true }
zstd = { workspace = true, features = ["zstdmt"] }
memchr = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
indicatif = { workspace = true }
indexmap = { workspace = true }
ahash = { workspace = true }
papaya = { workspace = true }
scc = { workspace = true }
quanta = { workspace = true }
byteorder = { workspace = true }
regex = { workspace = true }
clap = { workspace = true, optional = true }
xz2 = "0.1.7"
mmap-guard = "0.2.2"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true
