[package]
name = "nixdex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for nixdex — building and searching a Nix package file index"
publish = true

[features]
default = []
cli = ["dep:clap"]
daemon = ["dep:axum"]
prebuilt = []

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
rayon = { workspace = true }
sonic-rs = { workspace = true }
fst = { workspace = true }
roaring = { workspace = true }
zstd = { workspace = true }
memchr = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
indicatif = { workspace = true }
indexmap = { workspace = true }
ahash = { workspace = true }
papaya = { workspace = true }
scc = { workspace = true }
quanta = { workspace = true }
byteorder = { workspace = true }
regex = { workspace = true }
frizbee = { workspace = true }
clap = { workspace = true, optional = true }
xz2 = "0.1.7"
mmap-guard = "0.2.2"
fastrand = "2"
axum = { version = "0.8", features = ["json"], optional = true }
sha2 = "0.10"
subtle = "2.6"
redb = "4.1"
grep-regex = "0.1.14"
grep-matcher = "0.1.8"
regex-syntax = "0.8"

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
divan = { workspace = true }
tower = { version = "0.5", features = ["util"] }

[[bench]]
name = "search"
harness = false

[[bench]]
name = "locate"
harness = false

[[bench]]
name = "index"
harness = false

[[bench]]
name = "frcode"
harness = false

[[bench]]
name = "basename_index"
harness = false

[lints]
workspace = true
