[package]
name = "nixdex-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core library for nixdex — building and searching a Nix package file index"
publish = true

[features]
default = []
cli = ["dep:clap"]
daemon = ["dep:axum"]
prebuilt = []
cdc = ["dep:fastcdc", "dep:blake3"]

[dependencies]
tokio = { workspace = true }
reqwest = { workspace = true }
rayon = { workspace = true }
sonic-rs = { workspace = true }
fst = { workspace = true }
roaring = { workspace = true }
zstd = { workspace = true }
memchr = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
postcard = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
indicatif = { workspace = true }
indexmap = { workspace = true }
ahash = { workspace = true }
papaya = { workspace = true }
scc = { workspace = true }
quanta = { workspace = true }
byteorder = { workspace = true }
regex = { workspace = true }
fuzzy-matcher = { workspace = true }
clap = { workspace = true, optional = true }
xz2 = "0.1.7"
mmap-guard = "0.2.2"
fastrand = "2"
axum = { version = "0.8", features = ["json"], optional = true }
sha2 = "0.10"
subtle = "2.6"
redb = "4.1"
fastcdc = { version = "3.2.1", optional = true }
blake3 = { version = "1", optional = true }

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true }
proptest = { workspace = true }
criterion = { workspace = true }
tower = { version = "0.5", features = ["util"] }
axum = "0.8"

[[bench]]
name = "search"
harness = false

[[bench]]
name = "locate"
harness = false

[[bench]]
name = "index"
harness = false

[[bench]]
name = "cnf"
harness = false

[lints]
workspace = true
