[package]
name = "nixdex-daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Optional background daemon for nixdex prebuilt indexes and HTTP lookups"
publish = true

[dependencies]
clap = { workspace = true }
tokio = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
nixdex-core = { workspace = true, features = ["daemon", "prebuilt"] }
nixdex-history = { workspace = true }
nixdex-options = { workspace = true }

[lints]
workspace = true
