[package]
name = "nixdex"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Umbrella crate for nixdex — a modern nix-index / nix-locate rewrite"
rust-version.workspace = true
publish = true

[lints]
workspace = true
